# ppp

./: .bazelrc  .dockerignore  .gitignore  .travis.yml  100-es2015.6858fdf56d1ae30e0d71.js  100-es5.6858fdf56d1ae30e0d71.js  101-es2015.acee814a92d551cb7876.js  101-es5.acee814a92d551cb7876.js  102-es2015.21d980d3dadc57b81e5e.js  103-es2015.aff0b45ba8b8fd4319c4.js  103-es5.aff0b45ba8b8fd4319c4.js  104-es5.c97a50cd1bfa1b2ed8ff.js  105-es2015.3229ec54f0c6e597d2af.js  106-es2015.7398741e5b52c0d8a3a0.js  106-es5.7398741e5b52c0d8a3a0.js  107-es2015.56324eab3f01222a4dc1.js  108-es2015.ffe69921db2ca81c49a9.js  109-es2015.f8264d98f6efe34b353d.js  109-es5.f8264d98f6efe34b353d.js  110-es2015.5b643e9439625f6e2cbb.js  110-es5.5b643e9439625f6e2cbb.js  111-es2015.2db6ef40dc6fcd4d562d.js  111-es5.2db6ef40dc6fcd4d562d.js  112-es2015.07cb39059d001b2cafc8.js  112-es5.07cb39059d001b2cafc8.js  113-es2015.04c5674db7b3e7ccade5.js  113-es5.04c5674db7b3e7ccade5.js  14-es2015.dc7f1b14728c799ca995.js  14-es5.dc7f1b14728c799ca995.js  15-es2015.0e3cb0b64311a1875989.js  15-es5.0e3cb0b64311a1875989.js  16-es2015.86b7686f8a201219240c.js  16-es5.86b7686f8a201219240c.js  17-es2015.1fc0f283ca8e961c7ad2.js  17-es5.1fc0f283ca8e961c7ad2.js  18-es2015.c42bf1a422c7a4af28ca.js  18-es5.c42bf1a422c7a4af28ca.js  19-es2015.37555f863d14ed6f0089.js  2-es2015.7762ce36fa8eaa07eccd.js  2-es5.7762ce36fa8eaa07eccd.js  (+215 more)
.devcontainer/: .bashrc  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: ci.yaml
addon/: CMakeLists.txt  addon.node  binding.gyp  test.js
addon/include/: pppwrapper.h
addon/source/: addon.cpp  pppwrapper.cpp
assets/: libppp.js  libppp.wasm  wasm-worker.js
assets/haarcascades/: haarcascade_frontalface_alt.xml
cmake/: BuildAndInstall.cmake  CMakeLists.txt  Configuration.cmake  ResolveOpenCV.cmake  ResolveRapidJSON.cmake
cordova/: .gitignore  config.xml  ionic.config.json  my-release-key.jks  package-lock.json  package.json
cordova/cpp/: CMakeLists.txt  NativeLog.h  NativeWrapper.cpp  NativeWrapper.h  TestCpp.cpp  TestCpp.h  class_define.json
cordova/hooks/: before_prepare.js
lib/: index.ts  types.ts  worker.ts
libppp/: .clang-format  .clang-tidy  .clangd  .gitignore  BUILD  CMakeLists.txt  format-all.sh
libppp/app/: ArgsParser.cpp  ArgsParser.h  main.cpp
libppp/app/tclap/: Makefile.am  Makefile.in
libppp/embind/: FreeFunctions.cc  PublicPppWasm.cc
libppp/include/: CanvasDefinition.h  CommonHelpers.h  ComplianceChecker.h  ComplianceResult.h  ConfigLoader.h  CrownChinEstimator.h  EasyExif.h  EyeDetector.h  FaceDetector.h  FaceMeshExtractor.h  FacePoseEstimator.h  FileSystem.h  Geometry.h  IComplianceChecker.h  IConfigurable.h  ICrownChinEstimator.h  IDetector.h  IFaceMeshExtractor.h  IFacePoseEstimator.h  IImageStore.h  IPhotoPrintMaker.h  ISelfCoefficientCalculator.h  ISelfCoefficientImage.h  ISelfieSegmentation.h  ImageStore.h  LandMarks.h  LipsDetector.h  Logger.h  MediapipeUtils.h  OrtInstance.h  PassportStandard.h  PhotoDecorator.h  PhotoPrintMaker.h  PhotoStandard.h  PppEngine.h  PrintDefinition.h  PublicPppEngine.h  SelfCoefficientCalculator.h  SelfCoefficientImage.h  SelfieSegmentation.h  (+5 more)
libppp/python/: example.py  libpppwrapper.py
libppp/share/: bundle-config.py  config.json  face_landmarks.pbtxt  trainer.cpp
libppp/src/: CanvasDefinition.cpp  CommonHelpers.cpp  ComplianceChecker.cpp  ComplianceResult.cpp  ConfigLoader.cpp  CrownChinEstimator.cpp  EasyExif.cpp  EyeDetector.cpp  FaceDetector.cpp  FaceMeshExtractor.cpp  FacePoseEstimator.cpp  FileSystem.cpp  IDetector.cpp  ImageStore.cpp  LandMarks.cpp  LipsDetector.cpp  MediapipeUtils.cpp  PassportStandard.cpp  PhotoDecorator.cpp  PhotoPrintMaker.cpp  PhotoStandard.cpp  PppEngine.cpp  PrintDefinition.cpp  PublicPppEngine.cpp  SelfCoefficientCalculator.cpp  SelfCoefficientImage.cpp  SelfieSegmentation.cpp  TfLiteRunner.cpp  Utilities.cpp  libppp.cpp
libppp/swig/: libppp.i
libppp/test/: ComplianceCheckerTests.cpp  EyeDetectorTests.cpp  FaceDetectorTests.cpp  FacePoseEstimatorTests.cpp  GeometryTests.cpp  ImageStoreTests.cpp  LandMarkDetectionTests.cpp  MockCrownChinEstimator.h  MockDetector.h  MockFaceMeshExtractor.h  MockImageStore.h  MockPhotoPrintMaker.h  PhotoStandardTests.cpp  PppEngineTests.cpp  SegmentationTests.cpp  TestHelpers.cpp  TestHelpers.h  TestPhotoDecorator.cpp  TfLiteRunnerTests.cpp  TiledPrintTests.cpp  UtilitiesTests.cpp  main.cpp
libppp/test/data/: 001_frontal.jpg.json  013_frontal.jpg.json  014_frontal.jpg.json  020_frontal.jpg.json  021_frontal.jpg.json  078_frontal.jpg.json  headPose.jpg.json
libppp/trainer/: trainer.cpp
model/: model.eap
research/: compliance-checks.json  curl-face-api.bat  eye_separation_face_height_experiment.m  geometry-model.docx  landmarks_to_via.py  mlp_training.m  stats.m
research/faces_caltech/: ImageData.mat  README  via_region_data.csv
research/mugshot_frontal_original_all/: via_region_data.csv  via_region_data_dpd.csv
research/my_database/: via_region_data.csv
research/scripts/: embed_resource.py  face_geometry.py  landmarks_to_via.py  photo-requirements.py  photorequirements.json  pose_estimation.py  reduce_landmark_points.py  requirements.txt  sample.py  setenv.sh
scripts/: all.bat  all.sh  cppgen.py
scripts/cpp-templates/: ClassTypeHeader.h  ClassTypeInterface.h  ClassTypeSource.cpp  ClassTypeTests.cpp  TrivialClassHeader.h
server/: CMakelists.txt
server/exe/: main.cpp
server/include/: CrowServer.h  HttpServer.h  MultiPartFormParser.h  PppServer.h  crow_all.h  fields_alloc.hpp  stdafx.h  utility.h
share/: config.json  processingdata.json
tests/: freefunctions.test.js
webapp/: .angular-cli.json  .dockerignore  .firebaserc  .gitignore  .prettierrc  Dockerfile  README.md  angular.json  app-version.js  app.js  appversion.js  bower.json  capacitor.config.json  deploy.azure.bat  iisnode.yml  ionic.config.json  karma.conf.js  libpppwrapper.py  ngsw-config.json  package-lock.json  package.json  ppp.js  proxy.conf.json  server.js  server.py  tsconfig.app.json  tsconfig.json  tslint.json  web.config
webapp2/: .gitignore  Startup.cs
(+171 files in other folders)
